Fix spacing of header

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,7 @@
 
 #category-block {
   margin-bottom: 420px;
+  margin-right: 10px;
   color: yellow;
 }
 
@@ -31,4 +32,8 @@
 h2.link {
     display: inline;
     padding-left: 35px;
+}
+
+#header {
+  width: 500px;
 }
